fix: habilitar visibilidad de foto en escritorio e integrar guardado en perfil

--- a/src/assets/style/elements/images.styl
+++ b/src/assets/style/elements/images.styl
@@ -22,10 +22,11 @@
 
 .photo
   width 50px
-  height 60px
+  height 50px
   margin 12px auto
   display table
   border-radius 50%
+  object-fit cover
   
 .photo-logo
   height: 80px;
@@ -47,7 +48,7 @@
     display none
 @media (min-width: d-break)
   .photo 
-    display none
+    display block
 @media (max-width: d-break)
   .photo-header
     display block
